belajar mengatasi overfitting dan underfitting

--- a/overfitting-underfitting/latihan-mengatasi-overfitting.ipynb
+++ b/overfitting-underfitting/latihan-mengatasi-overfitting.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -164,6 +164,276 @@
    "metadata": {},
    "source": [
     "pada gambar di atas, dapat kita lihat bahwa learning curve menunujukkan jarak yang sangat jauh antara training error dan cross validation error, ini memberikan indikasi bahwa terjadi overfittung. \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Mengatasi Overfitting"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Cross-Validation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cross-Validation MSE: 0.5562691658603186\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.model_selection import cross_val_score\n",
+    "\n",
+    "# Menggunakan cross-validation dengan 5 fold\n",
+    "cross_val_scores = cross_val_score(model, X_train, y_train, cv=5, scoring='neg_mean_squared_error')\n",
+    "\n",
+    "# Menampilkan hasil cross-validation\n",
+    "print(f'Cross-Validation MSE: {-cross_val_scores.mean()}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "cross_val_score mengevaluasi model menggunakan metode cross-validation dengan membagi data menjadi 5 bagian. Pada setiap langkah, model dilatih dengan 4 bagian data dan diuji dengan 1 bagian sisanya. Proses ini dilakukan sebanyak 5 kali sehingga setiap bagian data berkesempatan menjadi data uji. \n",
+    "\n",
+    "Parameter scoring='neg_mean_squared_error' digunakan untuk menghitung Mean Squared Error (MSE) model dan hasilnya dibalik agar menjadi positif. MSE dari setiap percobaan kemudian dirata-ratakan untuk memberikan gambaran kinerja model secara keseluruhan.\n",
+    "\n",
+    "Setelah menggunakan cross-validation, hasil Cross-Validation MSE sebesar 0.556 didapatkan. Sebelumnya, model menunjukkan hasil Training MSE yang sangat kecil, yaitu 9.90 × 10⁻³² dan Test MSE sebesar 0.526. Hasil ini menunjukkan bahwa sebelum cross-validation, model mengalami overfitting karena performanya hampir sempurna pada data latih (training), tetapi tidak begitu baik dalam data uji (test).\n",
+    "\n",
+    "Dengan cross-validation, performa model diuji lebih menyeluruh dan lebih adil karena data dibagi menjadi beberapa bagian untuk diuji secara bergantian. Hasil Cross-Validation MSE yang lebih mendekati Test MSE (0.556 vs. 0.526) menunjukkan bahwa model lebih konsisten dan mampu menghindari overfitting. Ini berarti model kini lebih baik dalam memprediksi data baru dan lebih stabil ketika diuji dengan data yang berbeda.\n",
+    "\n",
+    "Meskipun hasil Cross-Validation MSE sudah lebih stabil, kita masih melihat adanya perbedaan cukup besar dengan Training MSE yang sangat kecil. Ini menunjukkan bahwa model kita masih belum optimal dan mungkin masih mengalami overfitting. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Regularization (max Depth, Min Samples Split, Min Samples Leaf)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training MSE (After Regularization): 0.4928096322147045\n",
+      "Test MSE (After Regularization): 0.5210801561811793\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Membuat model decision tree dengan d=kedalaman yang lebih kecil\n",
+    "model_reg = DecisionTreeRegressor(max_depth=5, random_state=42)\n",
+    "model_reg.fit(X_train, y_train)\n",
+    "\n",
+    "# Evaluasi pada data latih dan uji \n",
+    "y_train_pred_reg = model_reg.predict(X_train)\n",
+    "y_test_pred_reg = model_reg.predict(X_test)\n",
+    "\n",
+    "# Hitung MSE \n",
+    "train_mse_reg = mean_squared_error(y_train, y_train_pred_reg)\n",
+    "test_mse_reg = mean_squared_error(y_test, y_test_pred_reg)\n",
+    "\n",
+    "print(f'Training MSE (After Regularization): {train_mse_reg}')\n",
+    "print(f'Test MSE (After Regularization): {test_mse_reg}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Hasil ini menunjukkan peningkatan dibandingkan sebelumnya, yaitu perbedaan antara Training MSE dan Test MSE menjadi lebih kecil. Ini berarti model telah menjadi lebih seimbang dan tidak lagi terlalu fokus pada data latih (overfitting) karena performa dalam data uji sekarang lebih mendekati performa pada data latih. Regularisasi berhasil membuat model lebih mampu memprediksi data baru dengan lebih akurat."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Pruning (Pruning manual pada kedalaman pohon)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Cara ketiga, kita mencoba metode pruning untuk mengatasi overfitting pada Decision Tree. Teknik yang digunakan adalah Cost Complexity Pruning dengan parameter ccp_alpha. Ini memungkinkan kita memangkas cabang-cabang pohon yang kurang penting. Semakin besar nilai ccp_alpha, semakin banyak pemangkasan dilakukan."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training MSE (After Prunning): 0.9189620181001872\n",
+      "Test MSE (After Prunning): 0.9194598144703808\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Menggunakan ccp_alpha untuk pruning (Cost Complexity Pruning)\n",
+    "path = model.cost_complexity_pruning_path(X_train, y_train)\n",
+    "ccp_alphas = path.ccp_alphas\n",
+    "\n",
+    "# Melatih model dengan pruning \n",
+    "model_prunned = DecisionTreeRegressor(random_state=42, ccp_alpha=ccp_alphas[-2])\n",
+    "model_prunned.fit(X_train, y_train)\n",
+    "\n",
+    "# Membuat prediksi \n",
+    "y_train_pred_prunned = model_prunned.predict(X_train)\n",
+    "y_test_pred_prunned = model_prunned.predict(X_test)\n",
+    "\n",
+    "# Menghitung MSE \n",
+    "train_mse_prunned = mean_squared_error(y_train, y_train_pred_prunned)\n",
+    "test_mse_prunned = mean_squared_error(y_test, y_test_pred_prunned)\n",
+    "\n",
+    "print(f'Training MSE (After Prunning): {train_mse_prunned}')\n",
+    "print(f'Test MSE (After Prunning): {test_mse_prunned}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "hasil ini menunjukkan bahwa setelah diterapkan prunning, kesalahan pada data latih dan data uji menjadi hampir sama. ini adalah tanda bahwa model telah berhasil mengurangi overfitting karena perbedaan antara MSE pada data latih dan data uji sudah sangat kecil. meskipun mse pada data latih meningkat dibandingkan model sebelumnya, kemampuan model untuk melakukan generalisasi dalam data baru menjadi lebih baik dan lebih stabil"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Data Augmentation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "dalam contoh ini kita melakukan augmentasi dengan menambahkan sedikit noise atau gangguad pada data latih. noise ini adalah gangguan acak yang tidak signifikan, tetapi cukup untuk memberikan variasi pada data latih kita"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Augmented Data Training MSE: 0.30955797826287335\n",
+      "Augmented Data Test MSE: 0.5363975034586388\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Menambahkan sedikit noise ke data sebagai augmentasi\n",
+    "X_train_aug = X_train + np.random.normal(0, 0.1, X_train.shape)\n",
+    " \n",
+    "# Melatih ulang model dengan augmented data\n",
+    "model_aug = DecisionTreeRegressor(max_depth=10, random_state=42)\n",
+    "model_aug.fit(X_train_aug, y_train)\n",
+    " \n",
+    "# Membuat prediksi\n",
+    "y_train_pred_aug = model_aug.predict(X_train_aug)\n",
+    "y_test_pred_aug = model_aug.predict(X_test)\n",
+    " \n",
+    "# Menghitung MSE\n",
+    "train_mse_aug = mean_squared_error(y_train, y_train_pred_aug)\n",
+    "test_mse_aug = mean_squared_error(y_test, y_test_pred_aug)\n",
+    " \n",
+    "print(f'Augmented Data Training MSE: {train_mse_aug}')\n",
+    "print(f'Augmented Data Test MSE: {test_mse_aug}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Dari hasil tersebut, kita dapat melihat perubahan signifikan setelah data augmentation. Sebelumnya, Training MSE sangat rendah, mendekati nol, menunjukkan overfitting yang besar. Dengan menerapkan data augmentation, Training MSE naik menjadi 0.3193. \n",
+    "\n",
+    "Ini menunjukkan bahwa model sekarang lebih general dan tidak terlalu pas dengan data latih. Test MSE tetap hampir sama pada 0.5219, yang menunjukkan performa model dalam data uji tidak banyak berubah.\n",
+    "\n",
+    "Secara keseluruhan, data augmentation membantu mengurangi overfitting dengan membuat model lebih adaptif terhadap variasi dalam data latih meskipun hasil pada data uji tetap stabil."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Dropout\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Namun, untuk masalah yang kita hadapi, yaitu model Decision Tree, kita tidak dapat menerapkan dropout secara langsung. Sebagai gantinya, kita menggunakan pendekatan lain yang mirip, yaitu Random Forest. Random Forest adalah ensemble method yang menggunakan banyak pohon keputusan untuk meningkatkan kinerja model dan mengurangi overfitting."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Random Forest Training MSE: 0.1694494883912745\n",
+      "Random Forest Test MSE: 0.2944600120852388\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.ensemble import RandomForestRegressor\n",
+    "\n",
+    "# Inisialisasi random forest dengan n_estimators (jumlah pohon)\n",
+    "model_rf = RandomForestRegressor(n_estimators=100, max_depth=10, random_state=42)\n",
+    "\n",
+    "# melatih model \n",
+    "model_rf.fit(X_train, y_train)\n",
+    "\n",
+    "# membuat prediksi \n",
+    "y_train_pred_rf = model_rf.predict(X_train)\n",
+    "y_test_pred_rf = model_rf.predict(X_test)\n",
+    "\n",
+    "# Menghitung MSE \n",
+    "train_mse_rf = mean_squared_error(y_train, y_train_pred_rf)\n",
+    "test_mse_rf = mean_squared_error(y_test, y_test_pred_rf)\n",
+    "\n",
+    "print(f'Random Forest Training MSE: {train_mse_rf}')\n",
+    "print(f'Random Forest Test MSE: {test_mse_rf}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Sebelumnya, model Decision Tree menunjukkan Training MSE yang sangat kecil, yaitu 9.90 × 10⁻³² dan Test MSE sebesar 0.5265; ini mengindikasikan adanya overfitting. Dengan menerapkan Random Forest, hasil MSE pada data latih adalah 0.1694 dan data uji adalah 0.2945. \n",
+    "\n",
+    "Meskipun MSE dalam data latih sedikit meningkat dibandingkan dengan model awal, MSE pada data uji menunjukkan penurunan yang signifikan. Ini menandakan bahwa model Random Forest lebih baik dalam mengatasi overfitting dan memberikan hasil yang lebih stabil saat diterapkan pada data baru."
    ]
   }
  ],
